src/test/resources/purescript_examples/passing/AutoPrelude2.purs.psi
Purescript File
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(Qualified)
        PSASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Prelude')
        PsiElement(whitespace)('\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Prelude')
        PsiElement(whitespace)(' ')
  PsiErrorElement:Unexpected as. Expecting Module
    PsiElement(as)('as')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('P')
    PsiElement(whitespace)('\n')
    PsiElement(import)('import')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Control')
    PsiElement(.)('.')
    PsiElement(proper name)('Monad')
    PsiElement(.)('.')
    PsiElement(proper name)('Eff')
    PsiElement(.)('.')
    PsiElement(proper name)('Console')
    PsiElement(whitespace)('\n\n')
    PsiElement(identifier)('f')
    PsiElement(whitespace)(' ')
    PsiElement(::)('::')
    PsiElement(whitespace)(' ')
    PsiElement(forall)('forall')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(.)('.')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(whitespace)(' ')
    PsiElement(->)('->')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(whitespace)('\n')
    PsiElement(identifier)('f')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('P')
    PsiElement(.)('.')
    PsiElement(identifier)('id')
    PsiElement(whitespace)('\n\n')
    PsiElement(identifier)('main')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('P')
    PsiElement(.)('.')
    PsiElement(()('(')
    PsiElement(operator)('$')
    PsiElement())(')')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('log')
    PsiElement(whitespace)(' ')
    PsiElement(()('(')
    PsiElement(()('(')
    PsiElement(identifier)('f')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('P')
    PsiElement(operator)('.<<<')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('f')
    PsiElement())(')')
    PsiElement(whitespace)(' ')
    PsiElement(string)('"Done"')
    PsiElement())(')')
    PsiElement(whitespace)('\n')
